<resources>
    <string name="app_name">Oblivium</string>
    <string name="format_version">Version %s</string>
    <string name="all_rights_reserved">ALL RIGHTS RESERVED ©</string>
    <string name="notification_silent">No sound notification</string>
    <string name="notification_alert">With sound notification</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="setup_password">Set up a password</string>
    <string name="next">Next</string>
    <string name="recover_password">Recover password</string>
    <string name="a">\@</string>
    <string name="checking">Checking</string>
    <string name="choose_color">Choose a theme color</string>
    <string name="people">Conversations</string>
    <string name="person">Conversation</string>
    <string name="persons">Persons</string>
    <string name="invite">Invite</string>
    <string name="invite_cancel">Invite Cancel</string>
    <string name="invite_canceling">Invite canceling&#8230;</string>
    <string name="invite_accepting">Invite accepting&#8230;</string>
    <string name="invite_rejecting">Invite rejecting&#8230;</string>
    <string name="invitations">Invitations</string>
    <string name="invitation_accepted">Invitation accepted.</string>
    <string name="invitation_received">Invitation received.</string>
    <string name="invitation_sent_you">sent you an invitation.</string>
    <string name="send_invite_to_friend">Send a invitation to friend.</string>
    <string name="settings">Settings</string>
    <string name="no_invitations">No invitations.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="or">or</string>
    <string name="no_contact">No Contact</string>
    <string name="no_messages">No messages.</string>
    <string name="message">Message</string>
    <string name="canceled">Canceled</string>

    <string name="persons_count">%d contact%s</string>
    <string name="format_few_ago">A few %s ago</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="yesterday">Yesterday</string>
    <string name="several_days">Several days ago</string>
    <string name="inviting">Inviting.</string>
    <string name="sent_by">Sent by:</string>
    <string name="sent_to">Sent to:</string>
    <string name="files">Files</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="arrived_message">New message arrived. Touch to open.</string>

    <string name="correct_password">Correct Password</string>
    <string name="back">Back</string>
    <string name="forward_continue">Continue</string>
    <string name="wrong_password">Wrong password.</string>
    <string name="wrong_password_description">You can log in with another user or create a new one.</string>
    <string name="connection_failure">Connection Failure!</string>
    <string name="connection_failure_description">Server offline or no connection. The system may be undergoing maintenance.</string>
    <string name="ban">You do not have access.</string>
    <string name="ban_description">Your profile does not meet the minimum requirements to use this app.</string>
    <string name="send_invite">Send a Invite</string>
    <string name="send_invite_description">Enter your friend\'s @nickname. They will receive an invitation to start a chat with you.</string>
    <string name="about">About</string>
    <string name="about_description">This app aims to create a system for people with total anonymity. Its purpose is to promote the highest possible level of privacy. Message data is not stored—neither locally nor remotely. Developed by @oblivium.</string>
    <string name="confirmation">Confirmation</string>
    <string name="reject_description">Reject %s friend person invite?</string>
    <string name="accept_description">Accept %s friend person invite?</string>
    <string name="cancel_description">Cancel %s friend person invite?</string>

    <string name="few_seconds">Few seconds ago</string>
    <string name="format_minutes">%d minute%s ago</string>
    <string name="format_hours">%d hour%s ago</string>
    <string name="format_days">%d day%s ago</string>
    <string name="format_toast_message">%s says:\n%s</string>
    <string name="format_arrived_message">New message by %s</string>

    <string name="error_no_connection">No internet connection.</string>
    <string name="error_retry">Network error. Touch to retry.</string>
    <string name="error_invalid_username">Invalid username!</string>
    <string name="error_user_not_exists">User not exists!</string>
    <string name="error_file_read">Failed to read file.</string>
</resources>