<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:elevation="@dimen/margin"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_4"
    android:paddingVertical="@dimen/margin_3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/buttonImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/fab_transparent"
                android:src="@drawable/icon_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/images"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonVideo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/margin_3"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/fab_transparent"
                android:src="@drawable/icon_video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/videos"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonFile"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_3"
        android:background="@drawable/fab_transparent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_folder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/files"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>