<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:paddingHorizontal="@dimen/margin_3">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/button_rounded"
            android:src="@drawable/icon_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/persons"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <ImageButton
            android:id="@+id/buttonMenu"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_rounded"
            android:src="@drawable/icon_arrow_more" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/margin_3"
        android:background="@drawable/line_gradient" />

    <RelativeLayout
        android:id="@+id/buttonInvite"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:background="@drawable/button_rounded"
        android:clickable="true"
        android:padding="@dimen/margin_3"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textInvite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_invite_to_friend"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin"
                android:src="@drawable/icon_invite" />
        </RelativeLayout>
    </RelativeLayout>

    <lucns.oblivium.views.HorizontalIndeterminateThreeBalls
        android:id="@+id/threeBalls"
        android:layout_width="36dp"
        android:layout_height="12dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider"
        android:listSelector="@android:color/transparent"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp"
        android:scrollbarSize="1dp"
        android:scrollbarThumbVertical="@drawable/thumb_scrollbar"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonRetry"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button"
        android:layout_centerInParent="true"
        android:background="@drawable/button_transparent"
        android:paddingHorizontal="@dimen/margin_3"
        android:text="@string/error_retry"
        android:textColor="@drawable/text_state"
        android:visibility="invisible" />
</RelativeLayout>