<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background_end"
        android:orientation="horizontal"
        android:paddingTop="64dp"
        android:paddingBottom="@dimen/margin_3">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@drawable/button_rounded"
            android:src="@drawable/icon_arrow_back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

                <ImageView
                    android:id="@+id/iconVerified"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="@dimen/margin"
                    android:src="@drawable/icon_verified"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/app_name"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonMenu"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@drawable/button_rounded"
            android:src="@drawable/icon_arrow_more" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rootEditText"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/margin_2">

        <lucns.oblivium.views.HorizontalIndeterminateThreeBalls
            android:id="@+id/threeBalls"
            android:layout_width="36dp"
            android:layout_height="12dp"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_messages"
            android:textColor="@color/gray" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/list_divider"
        android:layout_below="@id/toolbar"
        android:dividerHeight="1dp"
        android:listSelector="@android:color/transparent"
        android:scrollbarSize="1dp"
        android:scrollbarThumbVertical="@drawable/thumb_scrollbar"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/rootEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_8"
        android:background="@drawable/edittext_background"
        android:orientation="horizontal"
        android:paddingStart="@dimen/margin_3">

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/message"
            android:inputType="textMultiLine|textCapSentences"
            android:maxHeight="110dp"
            android:maxLength="1024"
            android:minHeight="@dimen/edit_text"
            android:paddingVertical="@dimen/margin_2"
            android:paddingEnd="@dimen/margin_2"
            android:textColor="@drawable/text_state"
            android:textColorHint="@color/hint"
            android:textCursorDrawable="@drawable/cursor" />

        <ImageButton
            android:id="@+id/buttonAttach"
            android:layout_width="@dimen/edit_text"
            android:layout_height="@dimen/edit_text"
            android:layout_gravity="center"
            android:background="@drawable/fab_transparent"
            android:src="@drawable/icon_attach" />

        <ImageButton
            android:id="@+id/buttonSend"
            android:layout_width="@dimen/edit_text"
            android:layout_height="@dimen/edit_text"
            android:layout_gravity="center"
            android:background="@drawable/fab_transparent"
            android:src="@drawable/icon_send" />
    </LinearLayout>
</RelativeLayout>